[package]
name = "tcpkali2"
version = "0.1.0"
edition = "2024"
description = "A load testing tool for WebSocket and TCP server."
authors = ["limpo1989 <limpo1989@gmail.com>"]
repository = "https://github.com/limpo1989/tcpkali2"
homepage = "https://github.com/limpo1989/tcpkali2"
keywords = ["networking", "tcp", "websocket"]
categories = ["command-line-utilities", "network-programming"]
license = "Apache-2.0"

[dependencies]
clap = "4.5.37"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["time", "rt", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
rand = "0.9.1"
parking_lot = "0.12.3"
hdrhistogram = "7.3.0"
crossbeam-queue = "0.3.12"
bytes = "1.10.1"